# Statistical-NLP-Classifier

./: CMakeLists.txt  README.md
docs/: Project-Journal.md
gui/: Theme.cpp  Theme.hpp
include/: DataLoader.hpp  NaiveBayes.hpp
src/: DataLoader.cpp  NaiveBayes.cpp  gui_main.cpp  main.cpp
tests/: dataloader_test.cpp  mock_data.tsv
